# zephyr

./: CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig.zephyr  README.md  west.yml  微信支付交易明细证明(20250715-20251015)——【解压密码可在微信支付公众号查看】.zip:Zone.Identifier
arch/: Kconfig
arch/arc/: CMakeLists.txt  Kconfig
arch/common/: isr_tables.ld
arch/riscv/: Kconfig  Kconfig.isa
boards/: arc_lldbac_example.yaml.example
boards/common/: openocd.board.cmake
cmake/: dts.cmake  gcc-m-cpu.cmake
cmake/emu/: nsim.cmake
cmake/modules/: extensions.cmake
doc/: riscv_cfi_handoff.md
doc/releases/: release-notes-4.3.rst
drivers/i2c/: i2c_dw.c  i2c_dw.h  i2c_dw_port_x.h  i2c_dw_registers.h
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.riscv_aia  intc_arcv2_irq_unit.c  intc_riscv_aia.c  intc_riscv_aplic_msi.c  intc_riscv_imsic.c
drivers/ipm/: ipm_cavs_idc.c
drivers/serial/: uart_ns16550.c
drivers/spi/: spi_dw.c  spi_dw.h
drivers/timer/: arcv2_timer0.c  riscv_machine_timer.c
dts/arc/: arc_hsdk.dtsi
include/app_memory/: app_memdomain.h
include/linker/: common-ram.ld  common-rom.ld  intlist.ld  linker-defs.h  linker-tool-gcc.h  linker-tool-mwdt.h  sections.h
include/random/: rand32.h
include/toolchain/: common.h  gcc.h
include/zephyr/: kernel.h
kernel/: Kconfig  init.c  sched.c  thread.c
kernel/include/: kernel_arch_interface.h
lib/libc/: Kconfig
modules/: Kconfig.embarc-mli
modules/embarc_mli/: CMakeLists.txt  Kconfig  embarc_mli.ld
samples/aia_genmsi_test/: CMakeLists.txt  prj.conf  sample.yaml
samples/aplic_genmsi_debug/: CMakeLists.txt  GENMSI_FORMAT.md  prj.conf
samples/aplic_genmsi_smp/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/aplic_msi_test/: CMakeLists.txt  prj.conf  sample.yaml
samples/coop_synchronization/: prj.conf  sample.yaml
samples/embarc_mli/: CMakeLists.txt  prj.conf
samples/hello_world/: prj.conf
samples/modules/embarc_mli/example_har_smartphone/: CMakeLists.txt  README.rst
samples/modules/embarc_mli/example_har_smartphone/src/: har_smartphone_coefficients_fx.c  har_smartphone_coefficients_sa.c  har_smartphone_constants.h  har_smartphone_model.h  har_smartphone_model_fx.c  har_smartphone_model_sa.c  har_smartphone_ref_inout.h  ml_api_har_smartphone_main.c
samples/modules/embarc_mli/example_har_smartphone/src/small_test_base/: labels.c  tests.c
samples/modules/embarc_mli/hello_world/: CMakeLists.txt  README.rst  prj.conf
samples/modules/embarc_mli/hello_world/src/: main.c
samples/nsim_aia_probe/: prj.conf
samples/philosophers/: prj.conf
scripts/: gen_app_partitions.py  process_gperf.py
soc/snps/nsim/arc_v/: CMakeLists.txt  soc.yml
soc/snps/nsim/arc_v/rhx/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.rhx100  Kconfig.soc
soc/snps/nsim/arc_v/rmx/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/snps/nsim/arc_v/rmx5xx/: Kconfig
subsys/zbus/: zbus.c
sysbuild/: CMakeLists.txt  Kconfig
tests/kernel/dsp_sharing/: CMakeLists.txt  README.txt  prj.conf  testcase.yaml
tests/kernel/dsp_sharing/src/: calculation_arc.c  dsp_context.h  dsp_regs_arc.h  load_store.c  main.c  test_common.h
(+463 files in other folders)
